namespace net.gubbi.goofy.util {
    public class AnimationParams {
        public static readonly string DOOR_OPEN = "Open";
        public static readonly string DOOR_OPEN_COMPLETE = "OpenComplete";
        public static readonly string SITTING = "Sitting";
        public static readonly string SIT_COMPLETE = "SitComplete";
        public static readonly string DO_ACTION = "DoAction";
        public static readonly string TALKING = "Talking";
        public static readonly string SPEED = "Speed";
        public static readonly string DIRECTION = "Direction";
        public static readonly string COFFEE = "Coffee";        
        public static readonly string DRINK_ONCE = "DrinkOnce";        
    }
}